tests/build/cases/widget_new/malformed_property_path4.stderr
error: expected identifier
 --> cases/widget_new/malformed_property_path4.rs:6:31
  |
6 |         zero_ui::properties:: = 0;
  |                               ^
