tests/build/cases/widget_new/malformed_property_path4.rs
use zero_ui::widgets::blank;

fn main() {
    let _scope = zero_ui::core::app::App::blank();
    let _ = blank! {
        zero_ui::properties:: = 0;
    };
}
